@@ -1,0 +1,4 @@
+.rtl .external, a.feedlink {
+        padding: 0 !important;
+        background: none !important;
+}
