@@ -12,3 +12,9 @@
 	background: url(external.png) center right no-repeat;
 	padding-right: 13px;
 }
+
+.rtl a.feedlink {
+  background-position: right;
+  padding-right: 0;
+  padding-left: 16px;
+}
