@@ -1,0 +1,11 @@
+.rtl #bodyContent a.external {
+  background-image: url(external-rtl.png);
+  padding-right: 0;
+  padding-left: 13px;
+}
+
+.rtl a.feedlink {
+  background-position: right;
+  padding-right: 0;
+  padding-left: 16px;
+}
